# first

./: .dockerignore  .gitignore  CMakeLists.txt  INSTALL_DEPENDENCIES.md  README.md  README_BUILD.md  TEST_RESULTS.md  setup.sh  tmp_test.first
build-asan/: CTestTestfile.cmake
build-asan/Testing/Temporary/: CTestCostData.txt
build-asan/examples/: CTestTestfile.cmake
build-asan/runtime/tests/: test_runtime_array  test_runtime_integration  test_runtime_io  test_runtime_print  test_runtime_refcount  test_runtime_result  test_runtime_string
build-asan/tests/: CTestTestfile.cmake
cmake/: CPackPrePackage.cmake
docker/: Dockerfile.linux  Dockerfile.linux-test
docs/: ARRAY_GENERIC_API.md  COMPILER_PLAN.md  First-Language-Specification.md  First.g4  HEAD_XS_ZERO_DEEP_DIVE.md  PHASE1_2_STATUS.md  PHASE1_STATUS.md  STDLIB_REFERENCE.md  STRING_COMPARISON_AND_REGEX.md  backlog.md  charType.md
docs/backlog/: README.md  SPEC-BinaryFileIO.md  SPEC-BitwiseOperators.md  SPEC-ByteArray.md  SPEC-HexBinaryPrint.md  SPEC-HigherKindedTypes.md
examples/: CMakeLists.txt  build-and-run-all.sh  head_minimal.first  hello.first  list-generic-test.first  run-all-local.sh
examples/chapter-03-modules/src/: main.first
examples/chapter-06-records-pattern-matching/src/: main.first
examples/chapter-07-Intro-to-generic-types/src/: main.first
examples/chapter-09-interfaces/src/: main.first
examples/chapter-1-hello/: fir.json
examples/chapter-1-print-and-println/: fir.json
examples/chapter-2-functions-and-interactions/: fir.json
examples/chapter-3-modules/: build.sh  fir.json
examples/chapter-4-basic-expressions-types/: fir.json
examples/chapter-4-basic-expressions-types/src/: main.first
examples/hello/: fir.json
first-book/: README.md  chapter-01-getting-started.md  chapter-02-functions-and-interactions.md  chapter-03-modules-import-export.md  chapter-04-basic-types-expressions-type-inference.md  chapter-15-monadic-operators-in-interactions.md
first-reference/: Array.md  ArrayBuf.md  Date.md  Math.md  Prelude.md  README.md  Stdio.md  String.md
homebrew/: README.md  first-compiler.rb
include/first/: compiler.h  error_reporter.h  source_location.h
include/first/ast/: builder.h  declarations.h  expressions.h  match_case.h  node.h  patterns.h  program.h  statements.h  types.h  validator.h  visitor.h
include/first/ir/: ir_generator.h
include/first/parser/: parser.h  token.h
include/first/semantic/: derive_pass.h  module_resolver.h  semantic_checker.h  symbol_table.h  type_checker.h
lib/: Date.first  Math.first  Prelude.first
runtime/: CMakeLists.txt
runtime/include/first/runtime/: array.h  date.h  gc_alloc.h  io.h  refcount.h  regex.h  result.h  stdlib.h  string.h  task.h
runtime/src/runtime/: char.cpp  date.cpp  gc_alloc.cpp  io.cpp  refcount.cpp  regex.cpp  stdlib.cpp  string.cpp  task.cpp
runtime/tests/: test_array.cpp  test_gc.cpp  test_io.cpp  test_print.cpp  test_refcount.cpp  test_result.cpp  test_runtime_integration.cpp  test_string.cpp
scripts/: install.sh  package-linux-in-docker.sh  package-linux.sh  package.sh  test-linux-docker.sh  uninstall.sh
src/: compiler.cpp  error_reporter.cpp  main.cpp  source_location.cpp
src/ast/: builder.cpp  lambda_expr.cpp  match_case.cpp  match_expr.cpp  select_branch.cpp  types.cpp  validator.cpp
src/ir/: ir_generator.cpp
src/parser/: parser.cpp
src/semantic/: derive_pass.cpp  module_resolver.cpp  semantic_checker.cpp  symbol_table.cpp  type_checker.cpp
test-suite/: README.md  manifest.txt
test-suite/for-in/: README.md  manifest.txt
test-suite/parser/fail/: invalid_keyword.first  malformed_for.first  malformed_generic.first  malformed_interface.first  malformed_match.first  malformed_type.first  missing_arrow_return.first  missing_colon_type.first  missing_semicolon_expr.first  stray_token.first  unclosed_brace.first  unclosed_bracket.first  unclosed_paren.first
test-suite/parser/pass/: array_index.first  array_literal.first  binary_ops.first  block_expr.first  char_literal.first  comparison_ops.first  constructor_expr.first  derive_tostring.first  export_function.first  for_in_array.first  for_in_range.first  for_in_range_inclusive.first  function_generic.first  function_no_params.first  function_with_params.first  if_expression.first  implementation.first  implementation_generic.first  import_prelude.first  interaction_main.first  interface_generic.first  interface_hkt.first  interface_simple.first  lambda_expr.first  let_binding.first  literal_bool.first  literal_float.first  literal_int.first  literal_string.first  logical_ops.first  match_guards.first  match_record.first  module_decl.first  multiple_functions.first  nested_match.first  range_exclusive.first  record_literal.first  return_stmt.first  type_adt.first  type_annotation.first  (+4 more)
tests/: CMakeLists.txt  test_ast_basic.cpp  test_ast_binary.cpp  test_ast_builder.cpp  test_ast_functions.cpp  test_ast_integration.cpp  test_ast_statements.cpp  test_ast_validation.cpp  test_compliance.cpp  test_error_demo.cpp  test_error_enhancements.cpp  test_error_reporter.cpp  test_framework.h  test_integration.cpp  test_ir_adts.cpp  test_ir_arrays.cpp  test_ir_closures.cpp  test_ir_control_flow.cpp  test_ir_expressions.cpp  test_ir_functions.cpp  test_ir_generator.cpp  test_ir_generics.cpp  test_ir_interactions.cpp  test_ir_primitives.cpp  test_ir_records.cpp  test_lexer.cpp  test_main.cpp  test_multimodule.cpp  test_parser.cpp  test_semantic_restrictions.cpp  test_source_location.cpp  test_suite_runner.cpp  test_symbol_table.cpp  test_type_checker.cpp  test_type_checker_composite.cpp  test_type_checker_functions.cpp  tmp_array_type.first  tmp_interfaces.first
tests/modules/: Main.first  Math.first
tests/parser/: test_all_features.first  test_control_flow.first  test_enhanced_errors.first  test_expressions.first  test_for_in.first  test_functions.first  test_interfaces.first  test_modules.first  test_pattern_matching.first  test_simple.first  test_syntax_errors.first  test_tabs.first  test_types.first  test_variables.first
tools/: README.md  fir
(+82 files in other folders)
